[gd_scene load_steps=16 format=3 uid="uid://bhpakjvwrso0o"]

[ext_resource type="PackedScene" uid="uid://b8oisyfhyx2yr" path="res://scenes/level1/level1_world_environment.tscn" id="1_8gdpk"]
[ext_resource type="Script" uid="uid://bdp0724vtej6g" path="res://prototypes/drone_controls/drone_controls.gd" id="1_nhjp0"]
[ext_resource type="Texture2D" uid="uid://bryucxvj1igr8" path="res://assets/3D/Act1/Textures/Tiles/PatchyGrass1/PatchyGrass1_color.png" id="2_nhjp0"]
[ext_resource type="Texture2D" uid="uid://dbneqjtiho26b" path="res://assets/3D/Act1/Textures/Tiles/PatchyGrass1/PatchyGrass1_normal.png" id="3_dyyi7"]
[ext_resource type="PackedScene" uid="uid://bc323ftwy8i7t" path="res://scenes/enemies/drone/drone.tscn" id="4_5guql"]
[ext_resource type="Script" uid="uid://bn1l2muisrfkd" path="res://prototypes/drone_controls/target_mesh.gd" id="6_nhjp0"]
[ext_resource type="Material" uid="uid://1eaiuw1yi4yx" path="res://assets/3D/Act1/materials/buildings/bricks.tres" id="7_dyyi7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ljxl"]
albedo_texture = ExtResource("2_nhjp0")
roughness = 0.96
normal_enabled = true
normal_texture = ExtResource("3_dyyi7")
anisotropy_enabled = true
anisotropy = 0.2
uv1_scale = Vector3(30, 30, 30)

[sub_resource type="PlaneMesh" id="PlaneMesh_t8cm3"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_nc4hi"]

[sub_resource type="SphereMesh" id="SphereMesh_8gdpk"]
radius = 0.3
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nhjp0"]
vertex_color_use_as_albedo = true
albedo_color = Color(0.384314, 0.211765, 0.662745, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_8gdpk"]
radius = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_5guql"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tir8y"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[node name="DroneControls" type="Node3D"]
script = ExtResource("1_nhjp0")

[node name="WorldEnvironment" parent="." instance=ExtResource("1_8gdpk")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.915047, -0.100395, -0.390653, 0.261921, 0.88444, 0.386216, 0.306735, -0.455726, 0.8356, 0.0118855, -0.0196906, -0.0371979)
light_intensity_lux = 50000.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(70.6045, 0, -70.8167, 0, 1, 0, 70.8167, 0, 70.6045, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6ljxl")
mesh = SubResource("PlaneMesh_t8cm3")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]
collision_layer = 2
collision_mask = 261

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_nc4hi")

[node name="Drone" parent="." instance=ExtResource("4_5guql")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
initial_behavior = 6

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.998844, 0.00277772, 0.047985, 0, 0.998329, -0.0577906, -0.0480653, 0.0577238, 0.997175, -1.26748, 1.32559, 7.70359)
fov = 50.3

[node name="Interface" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Interface"]
offset_right = 579.0
offset_bottom = 471.0
color = Color(0, 0, 0, 0.309804)

[node name="Rows" type="VBoxContainer" parent="Interface/ColorRect"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 560.0
offset_bottom = 458.0
metadata/_edit_use_anchors_ = true

[node name="Row1" type="HBoxContainer" parent="Interface/ColorRect/Rows"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="PhysicsVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row1"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ColorRect/Rows/Row1/PhysicsVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Physics"
horizontal_alignment = 1

[node name="CharacterModeButton" type="Button" parent="Interface/ColorRect/Rows/Row1/PhysicsVContainer"]
layout_mode = 2
text = "Character Mode"

[node name="RigidModeButton" type="Button" parent="Interface/ColorRect/Rows/Row1/PhysicsVContainer"]
layout_mode = 2
text = "Rigid Mode"

[node name="RagdollModeButton" type="Button" parent="Interface/ColorRect/Rows/Row1/PhysicsVContainer"]
layout_mode = 2
text = "Ragdoll Mode"

[node name="ResetButton" type="Button" parent="Interface/ColorRect/Rows/Row1/PhysicsVContainer"]
layout_mode = 2
text = "Reset
"

[node name="DirectionVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row1"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ColorRect/Rows/Row1/DirectionVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = " Direction "
horizontal_alignment = 1

[node name="LeftButton" type="Button" parent="Interface/ColorRect/Rows/Row1/DirectionVContainer"]
layout_mode = 2
text = "Left"

[node name="RightButton" type="Button" parent="Interface/ColorRect/Rows/Row1/DirectionVContainer"]
layout_mode = 2
text = "Right"

[node name="VulnerabilityVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row1"]
layout_mode = 2

[node name="Label2" type="Label" parent="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = " Vulnerability "
horizontal_alignment = 1

[node name="InvulnerableButton" type="Button" parent="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer"]
layout_mode = 2
text = "Invulnerable"

[node name="DefendableButton" type="Button" parent="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer"]
layout_mode = 2
text = "Defendable"

[node name="VulnerableButton" type="Button" parent="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer"]
layout_mode = 2
text = "Vulnerable"

[node name="DieButton" type="Button" parent="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer"]
layout_mode = 2
text = "Die"

[node name="TargetingVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row1"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ColorRect/Rows/Row1/TargetingVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = " Targeting "
horizontal_alignment = 1

[node name="EnableButton" type="Button" parent="Interface/ColorRect/Rows/Row1/TargetingVContainer"]
layout_mode = 2
text = "Enable"

[node name="DisableButton" type="Button" parent="Interface/ColorRect/Rows/Row1/TargetingVContainer"]
layout_mode = 2
text = "Disable"

[node name="Row2" type="HBoxContainer" parent="Interface/ColorRect/Rows"]
layout_mode = 2

[node name="EngagementVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row2"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ColorRect/Rows/Row2/EngagementVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = " Engagement "
horizontal_alignment = 1

[node name="OpenButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EngagementVContainer"]
layout_mode = 2
text = "Open"

[node name="CloseButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EngagementVContainer"]
layout_mode = 2
text = "Close
"

[node name="QuickCloseButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EngagementVContainer"]
layout_mode = 2
text = "Quick Close
"

[node name="EnginesVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row2"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ColorRect/Rows/Row2/EnginesVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = " Engines "
horizontal_alignment = 1

[node name="ThrustButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EnginesVContainer"]
layout_mode = 2
text = "Thrust"

[node name="BurstButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EnginesVContainer"]
layout_mode = 2
text = "Burst"

[node name="StopButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EnginesVContainer"]
layout_mode = 2
text = "Stop"

[node name="QuickStopButton" type="Button" parent="Interface/ColorRect/Rows/Row2/EnginesVContainer"]
layout_mode = 2
text = "Quick Stop"

[node name="SpinnersVContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row2"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ColorRect/Rows/Row2/SpinnersVContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = " Spinners "
horizontal_alignment = 1

[node name="FireButton" type="Button" parent="Interface/ColorRect/Rows/Row2/SpinnersVContainer"]
layout_mode = 2
text = "Fire"

[node name="Row3" type="HBoxContainer" parent="Interface/ColorRect/Rows"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/ColorRect/Rows/Row3"]
layout_mode = 2

[node name="BlockButton" type="CheckButton" parent="Interface/ColorRect/Rows/Row3/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Block"

[node name="TargetBobButton" type="CheckButton" parent="Interface/ColorRect/Rows/Row3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Target Bob"

[node name="TargetMeshLeft" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.89456, 1.24847, 0)
collision_mask = 0
script = ExtResource("6_nhjp0")

[node name="Mesh" type="MeshInstance3D" parent="TargetMeshLeft"]
mesh = SubResource("SphereMesh_8gdpk")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_nhjp0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetMeshLeft"]
shape = SubResource("SphereShape3D_8gdpk")

[node name="TargetMeshRight" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.63781, 1.24847, 0)
collision_mask = 0
script = ExtResource("6_nhjp0")

[node name="Mesh" type="MeshInstance3D" parent="TargetMeshRight"]
mesh = SubResource("SphereMesh_8gdpk")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_nhjp0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetMeshRight"]
shape = SubResource("SphereShape3D_8gdpk")

[node name="Block" type="StaticBody3D" parent="."]
transform = Transform3D(0.820342, -0.571874, 0, 0.571874, 0.820342, 0, 0, 0, 1, 0.282282, -0.142416, -0.0020504)
visible = false
collision_layer = 514
collision_mask = 261

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Block"]
mesh = SubResource("BoxMesh_5guql")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("7_dyyi7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Block"]
shape = SubResource("ConvexPolygonShape3D_tir8y")
disabled = true

[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/PhysicsVContainer/CharacterModeButton" to="." method="_on_character_mode_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/PhysicsVContainer/RigidModeButton" to="." method="_on_rigid_mode_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/PhysicsVContainer/RagdollModeButton" to="." method="_on_ragdoll_mode_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/PhysicsVContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/DirectionVContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/DirectionVContainer/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer/InvulnerableButton" to="." method="_on_invulnerable_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer/DefendableButton" to="." method="_on_defendable_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer/VulnerableButton" to="." method="_on_vulnerable_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/VulnerabilityVContainer/DieButton" to="." method="_on_die_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/TargetingVContainer/EnableButton" to="." method="_on_enable_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row1/TargetingVContainer/DisableButton" to="." method="_on_disable_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EngagementVContainer/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EngagementVContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EngagementVContainer/QuickCloseButton" to="." method="_on_quick_close_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EnginesVContainer/ThrustButton" to="." method="_on_thrust_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EnginesVContainer/BurstButton" to="." method="_on_burst_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EnginesVContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/EnginesVContainer/QuickStopButton" to="." method="_on_quick_stop_button_pressed"]
[connection signal="pressed" from="Interface/ColorRect/Rows/Row2/SpinnersVContainer/FireButton" to="." method="_on_fire_button_pressed"]
[connection signal="toggled" from="Interface/ColorRect/Rows/Row3/VBoxContainer/BlockButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="Interface/ColorRect/Rows/Row3/VBoxContainer/TargetBobButton" to="." method="_on_target_bob_button_toggled"]
